src/components/Stacks/style.scss
@import "../../styles/variables.scss";
.stacks-container {
  margin-top: 5vw; /* Ajuste conforme necessário */
}

.stacks-title {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100%;

  h1 {
    color: $port-font-for;
    font-size: 48px;
    font-style: normal;
    font-weight: 700;
    margin-bottom: 49px;
  }

  p {
    color: $port-font-third;
    font-size: 32px;
    font-weight: 400;
  }
}

.stacks-content {
  display: flex;
  flex-wrap: wrap; /* Permite que os elementos se movam para a linha seguinte quando não há espaço suficiente */
  gap: 20px;
  width: 100%;
  margin: 0 auto;

  margin-top: 153px;
  margin-bottom: 253px;

  ul {
    display: flex; /* Alterado para flex para a orientação horizontal dos itens */
    flex-wrap: wrap; /* Permite que os itens se movam para a linha seguinte quando não há espaço suficiente */
    gap: 100px;
    list-style: none;

    li {
      margin-bottom: 20px; /* Adicione um espaçamento inferior entre os itens, ajuste conforme necessário */

      img {
        width: 100px;
        height: 100px;
      }
    }
  }
}

@media (max-width: 1200px) and (min-width: 330px) {
  .stacks-title {
    text-align: center;

    p {
      font-size: 25px;
    }

    h1 {
      width: 100%;
    }
  }

  .stacks-content {
    max-width: 98%;
    margin-top: 50px;
    margin-bottom: 50px;
  }
}

